/**
 * This file holds the protobuf definitions for the Weave GitOps gRPC API.
 * Messages and enums are defined in types.proto.
 */
syntax = "proto3";

package gitops_core.v1;

import "google/api/annotations.proto";
import "google/api/visibility.proto";
import "google/protobuf/any.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


import "api/core/types.proto";

option go_package = "github.com/weaveworks/weave-gitops/core/api";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "Weave GitOps Core API",
      version: "0.1",
      description: "The API handles operations for Weave GitOps Core";
    };
    consumes: "application/json",
    produces: "application/json",
    tags: {
        name: "internal",
        description: "Internal APIs which should not be used"
    };
};

/**
 * Weave GitOps Core API service definition
 */
service Core {
    /*
     * Get details of an object
     */
    rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["objects"]; };
        option (google.api.http) = {
            get: "/v1/namespaces/{namespace}/objects/{kind}/{name}"
        };
    }

    /*
     * List objects of kind across all clusters
     */
    rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["objects"]; };
        option (google.api.http) = {
            get: "/v1/objects/{kind}"
        };
    }

    /*
     * Lists the Flux runtime deployments across all clusters
     *
     * Determine which controllers are installed, their image versions, status, etc.
     */
    rpc ListFluxRuntimeObjects(ListFluxRuntimeObjectsRequest)
        returns (ListFluxRuntimeObjectsResponse) {
        option (google.api.http) = {
            get: "/v1/flux/deployments"
        };
    }

    /*
     * Lists the Flux CRDs across all clusters
     *
     * Determine which flux CRDs are installed and their versions
     */
    rpc ListFluxCrds(ListFluxCrdsRequest) returns (ListFluxCrdsResponse) {
        option (google.api.http) = {
            get: "/v1/flux/crds"
        };
    }

    /*
     * GetReconciledObjects returns a list of objects that were created
     * as a result of reconciling a Flux automation.
     * This list is derived by looking at the Kustomization or HelmRelease
     * specified in the request body.
     */
    rpc GetReconciledObjects(GetReconciledObjectsRequest)
        returns (GetReconciledObjectsResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["internal"]; };
        option (google.api.http) = {
            post: "/v1/reconciled_objects"
            body: "*"
        };
    };

    /*
     * GetChildObjects returns the children of a given object,
     * specified by a GroupVersionKind.
     * Not all Kubernets objects have children. For example, a Deployment
     * has a child ReplicaSet, but a Service has no child objects.
     */
    rpc GetChildObjects(GetChildObjectsRequest)
        returns (GetChildObjectsResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["internal"]; };
        option (google.api.http) = {
            post: "/v1/child_objects"
            body: "*"
        };
    };

    /*
     * List events for an object
     */
    rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["objects"]; };
        option (google.api.http) = {
            get: "/v1/namespaces/{namespace}/objects/{kind}/{name}/events"
        };
    }

    /*
     * Trigger reconciliation of multiple Flux objects
     */
    rpc SyncFluxObject(SyncFluxObjectRequest) returns (SyncFluxObjectResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["objects"]; };
        option (google.api.http) = {
            patch: "/v1/sync"
            body: "*"
        };
    }

    /*
     * Get version information about the server
     */
    rpc GetVersion(GetVersionRequest) returns (GetVersionResponse){
        option (google.api.http) = {
            get: "/v1/version"
        };
    }

    /*
     * Get feature flags
     *
     * New features are sometimes hidden behind feature flags. This endpoint
     * returns a list of feature flags and their values.
     */
    rpc GetFeatureFlags(GetFeatureFlagsRequest)
        returns (GetFeatureFlagsResponse) {
        option (google.api.http) = {
            get: "/v1/feature-flags"
        };
    }

    /*
     * Suspend or resume reconciling mulitple Flux objects
     */
    rpc ToggleSuspendResource(ToggleSuspendResourceRequest)
        returns (ToggleSuspendResourceResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["objects"]; };
        option (google.api.http) = {
            patch: "/v1/suspend"
            body: "*"
        };
    }

    /*
     * Get the logs for a GitOpsRun session
     */
    rpc GetSessionLogs(GetSessionLogsRequest) returns (GetSessionLogsResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["internal"]; };
        option (google.api.http) = {
            get: "/v1/session-logs"
        };
    }

    /*
     * Check which clusters have a given CRD installed
     *
     * Returns a hashmap where the keys are the names of
     * the clusters, and the value is a boolean indicating whether given CRD is
     * installed or not on that cluster.
     */
    rpc IsCRDAvailable(IsCRDAvailableRequest) returns (IsCRDAvailableResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["internal"]; };
        option (google.api.http) = {
            get : "/v1/crds/{name}/is-available",
        };
    }

    /*
     * Get the inventory of an object
     *
     * Only works for resources that have an inventory e.g. Kustomization,
     * HelmRelease, GitOpsSet.
     */
    rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse) {
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { tags: ["objects"]; };
        option (google.api.http) = {
            get: "/v1/namespaces/{namespace}/objects/{kind}/{name}/inventory"
        };
    }

    /*
     * List policies available on a cluster
     */
    rpc ListPolicies(ListPoliciesRequest) returns (ListPoliciesResponse) {
        option (google.api.http) = {
        get : "/v1/policies"
        };
    }

    /*
     * Gets a policy
     */
    rpc GetPolicy(GetPolicyRequest) returns (GetPolicyResponse) {
        option (google.api.http) = {
        get : "/v1/policies/{name}"
        };
    }

    /*
    * Lists policy validations
    */
    rpc ListPolicyValidations(ListPolicyValidationsRequest)
        returns (ListPolicyValidationsResponse) {
        option (google.api.http) = {
        get : "/v1/policy-validations"
        };
    }

    /*
    * Gets a policy validation
    */
    rpc GetPolicyValidation(GetPolicyValidationRequest)
        returns (GetPolicyValidationResponse) {
        option (google.api.http) = {
        get : "/v1/policy-validations/{validation_id}"
        };
    }
}

message GetInventoryRequest {
    string kind         = 1;
    string name         = 2;
    string namespace    = 3;
    string cluster_name  = 4;
    bool   with_children = 5;
}

message GetInventoryResponse {
    repeated InventoryEntry entries = 1;
}

message PolicyValidation {
    string   id                                     = 1;
    string   message                                = 2;
    string   cluster_id                             = 3;
    string   category                               = 4;
    string   severity                               = 5;
    string   created_at                             = 6;
    string   entity                                 = 7;
    string   entity_kind                            = 8;
    string   namespace                              = 9;
    string   violating_entity                       = 10;
    string   description                            = 11;
    string   how_to_solve                           = 12;
    string   name                                   = 13;
    string   cluster_name                           = 14;
    repeated PolicyValidationOccurrence occurrences = 15;
    string   policy_id                              = 16;
    repeated PolicyValidationParam parameters       = 17;
}

message ListPolicyValidationsRequest {
    string cluster_name = 1;
    Pagination pagination = 2;
    string application = 3;
    string namespace = 4;
    string kind = 5;
    string policy_id = 6;
    string validation_type = 7;
}

message ListPolicyValidationsResponse {
    repeated PolicyValidation violations = 1;
    int32    total                       = 2;
    string   next_page_token             = 3;
    repeated ListError errors            = 4;
}

message GetPolicyValidationRequest {
    string validation_id = 1;
    string cluster_name = 2;
    string validation_type = 3;
}

message GetPolicyValidationResponse {
    PolicyValidation validation = 1;
}

message PolicyValidationOccurrence {
    string message = 1;
}

message PolicyValidationParam {
    string              name       = 1;
    string              type       = 2;
    google.protobuf.Any value      = 3;
    bool                required   = 4;
    string              config_ref = 5;
}

message PolicyParamRepeatedString {
    repeated string value = 1;
}

message Pagination {
    int32  page_size  = 1;
    string page_token = 2;
}

message ListError {
    string cluster_name = 1;
    string namespace    = 2;
    string message      = 3;
}

message ListFluxRuntimeObjectsRequest {
    string namespace    = 1;
    string cluster_name = 2;
}

message ListFluxRuntimeObjectsResponse {
    repeated Deployment deployments = 1;
    repeated ListError errors       = 2;
}

message ListFluxCrdsRequest {
    string cluster_name = 1;
}

message ListFluxCrdsResponse {
    repeated Crd crds         = 1;
    repeated ListError errors = 2;
}

message GetObjectRequest {
    string name              = 1;
    string namespace         = 2;
    string kind              = 3;
    string cluster_name      = 4;
}

message GetObjectResponse {
    Object object = 1;
}

message ListObjectsRequest {
    string     namespace      = 1;
    /*
     * A flux object kind e.g. `Kustomization` or `GitRepository` etc
     */
    string     kind           = 2;
    string     cluster_name   = 3;
    string     label_selector = 4;
}

message ClusterNamespaceList { 
    string cluster_name = 1;
    repeated string namespaces = 2; 
}

message ListObjectsResponse {
    repeated Object objects   = 1;
    repeated ListError errors = 2;
    repeated ClusterNamespaceList searched_namespaces = 3;
}

message GetReconciledObjectsRequest {
    string   automationName         = 1;
    string   namespace              = 2;
    string   automationKind         = 3;
    repeated GroupVersionKind kinds = 4;
    string   clusterName            = 5;
}

message GetReconciledObjectsResponse {
    repeated Object objects = 1;
}

message GetChildObjectsRequest {
    GroupVersionKind group_version_kind = 1;
    string           namespace         = 2;
    string           parent_uid        = 3;
    string           cluster_name      = 4;
}

message GetChildObjectsResponse {
    repeated Object objects = 1;
}

message GetFluxNamespaceRequest {}

message GetFluxNamespaceResponse {
  string name = 1;
}

message ListNamespacesRequest {}

message ListNamespacesResponse {
  repeated Namespace namespaces = 1;
}

message ListEventsRequest {
    string         kind      = 1;
    string         name      = 2;
    string         namespace = 3;
    string         cluster_name = 4;
}

message ListEventsResponse {
    repeated Event events = 1;
}

message SyncFluxObjectRequest {
    repeated ObjectRef objects  = 1;

    // with_source can be used for resources like Kustomizations to trigger
    // synchronisation of the dependent Source resource.
    bool     with_source        = 2 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "If with_source is true, the dependent Source resource will be synced too, e.g. syncing a Kustomization with_source will sync an attached GitRepository"
      }
    ];
}

message SyncFluxObjectResponse {
}

message GetVersionRequest {}

message GetVersionResponse {
    string semver       = 1;
    string commit       = 2;
    string branch       = 3;
    string build_time   = 4;
    string kube_version = 5;
}

message GetFeatureFlagsRequest {}

message GetFeatureFlagsResponse {
    map<string, string> flags = 1;
}

message ToggleSuspendResourceRequest {
    repeated ObjectRef objects = 1;
    bool     suspend           = 2;
}

message ToggleSuspendResourceResponse {
}

message GetSessionLogsRequest {
    string session_namespace  = 1;
    string session_id         = 2;
    string token              = 3;
    string log_source_filter  = 4;
    string log_level_filter   = 5;
}

message LogEntry {
    string timestamp   = 1;
    string source      = 2;
    string level       = 3;
    string message     = 4;
    string sorting_key = 5;
}

message GetSessionLogsResponse {
    repeated LogEntry logs        = 1;
    string   next_token           = 2;
    string   error                = 3;
    repeated string   log_sources = 4;
}

message IsCRDAvailableRequest {
    string name = 1;
}

message IsCRDAvailableResponse {
    map<string,bool> clusters = 1;
}

message ListPoliciesRequest {
    Pagination pagination = 1;
}

message ListPoliciesResponse {
    repeated PolicyObj policies = 1;
    int32 total = 2;
    string next_page_token = 3;
    repeated ListError errors = 4;
}

message GetPolicyRequest {
    string name = 1;
    string cluster_name = 2;
}

message GetPolicyResponse {
    PolicyObj policy = 1;
    string cluster_name = 2;
}

message PolicyObj {
    string name = 1;
    string id = 2;
    string code = 3;
    string description = 4;
    string how_to_solve = 5;
    string category = 6;
    repeated string tags = 7;
    string severity = 8;
    repeated PolicyStandard standards = 9;
    string git_commit = 10;
    repeated PolicyParam parameters = 11;
    PolicyTargets targets = 12;
    string created_at = 13;
    string cluster_name = 14;
    string tenant = 15;
    repeated string modes = 16;
}

message PolicyStandard {
    string id = 1;
    repeated string controls = 2;
}

message PolicyParam {
    string name = 1;
    string type = 2;
    // value is a generic value that can be a string, int, bool and array of
    // strings
    google.protobuf.Any value = 3;
    bool required = 4;
}

message PolicyTargets {
    repeated string kinds = 1;
    repeated PolicyTargetLabel labels = 2;
    repeated string namespaces = 3;
}

message PolicyTargetLabel { map<string, string> values = 1; }
